--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/3BJ3jcB/LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Octopi</title>
+    <title>Octopi - AI Based Digital Marketing Agency</title>
   </head>
   <body>
     <div id="root"></div>
